tdf#124152 Broadcast StyleSheetModified to update style tree list box

...and also make undo redo update

Change-Id: I49d62d487bed27d9dbe2ab813d992d02ecaeb77a